--- a/.env.example
+++ b/.env.example
@@ -2,5 +2,7 @@ ROOT_USER=
 CHILD_USER=
 ROOT_KEY=
 CHILD_KEY=
+ROOT_BRIDGE=0x4C739372258826995C302CD655beE12689B97d3F
+ROOT_ERC20=
 ROOT_RPC=
 CHILD_RPC=
