--- a/.env.example
+++ b/.env.example
@@ -4,5 +4,5 @@ ROOT_KEY=
 CHILD_KEY=
 ROOT_BRIDGE=0x4C739372258826995C302CD655beE12689B97d3F
 ROOT_ERC20=
-ROOT_RPC=
-CHILD_RPC=
+ROOT_RPC=http://localhost:8545
+CHILD_RPC=http://localhost:8123
