fix deposit and added withdraw

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,8 @@ CHILD_USER=
 ROOT_KEY=
 CHILD_KEY=
 ROOT_BRIDGE=0x4C739372258826995C302CD655beE12689B97d3F
+CHILD_BRIDGE=0xff0ee8ea08cef5cb4322777f5cc3e8a584b8a4a0
 ROOT_ERC20=
+CHILD_ERC20= 
 ROOT_RPC=http://localhost:8545
 CHILD_RPC=http://localhost:8123
